--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
     "name": "xnxx-dl-wabot",
-    "logo": "./958f8c92ad0142ae5025e4154dbf9c50.jpg",
+    "logo": "https://i.ibb.co/sVnpNtD/958f8c92ad0142ae5025e4154dbf9c50.jpg",
     "description": "xnxx download bot",
     "stack": "container",
     "env": {
